== Changelog ==

= 1.1.6 - 24-05-2018 =
* Fix - Appending HTMl instead of text for preview description.

= 1.1.5.1 - 04-05-2018 =
* Fix - reCaptcha displaying after every inserted row issue.

= 1.1.5 - 03-05-2018 =
* Fix - Google reCaptcha console errors.
* Fix - Select2 styles conflict with WooCommerce.
* Fix - Undefined jQuery vars in `admin-helper.js`
* Fix - Prevent 404 in console for jQuery UI images.
* Fix - Compatibility with Elementor and SiteOrigin page builder.

= 1.1.4 - 24-04-2018 =
* Fix - Log handler class for addons.
* Fix - Entry ID value set for email.
* Fix - Error highlights in extensions.
* Fix - Correctly format the entry meta-key.
* Fix - Unwanted margin on form submit notice.
* Fix - Entries bulk actions with bottom selector.
* Fix - Create logger directory on plugin install.
* Tweak - Styles for logger, entries and jQuery UI.
* Tweak - Loads scripts conditionally on forms page only.
* Tweak - Allow meta-key for `everest_forms_process_format_*` hook.
* Tweak - Added hook `everest_forms_hidden_entry_fields` to hide entry fields.

= 1.1.3 - 12-04-2018 =
* Feature - Multiple email recipient.
* Fix - Per page entries in list table.
* Fix - Clone field next to it not at last.
* Fix - Empty field ID if meta key is renamed.
* Fix - Use wp_kses_post to save tinymce value.
* Tweak - jQuery-confirm JS alert library styles.
* Tweak - Horizontal scroll bar issue on frontend.
* Dev - Introduced new `EVF_Background_Process` abstract class.

= 1.1.2 - 29-03-2018 =
* Fix - Exclude CPT data from search.

= 1.1.1 - 23-03-2018 =
* Fix - Custom email message issue.

= 1.1.0 - 12-03-2018 =
* Feature - Entries panel to save form in database.

= 1.0.3 - 23-02-2018 =
* Fix - From email issue fix for default form

= 1.0.2 - 15-02-2018 =
* Fix - Box-sizing issue with list tables.
* Fix - Header already sent error on plugin activation.
* Tweak - Refactor list tables and menu related hooks placement.

= 1.0.1 - 13-02-2018 =
* Feature - JS validation on submit.