@@ -353,6 +353,8 @@ class EVF_Form_Task {
 		$email['evf_to_email']      = explode( ',', apply_filters( 'everest_forms_process_smart_tags', $email_notifications['evf_to_email'], $form_data, $fields, $this->entry_id ) );
 		$email['evf_to_email']      = array_map( 'sanitize_email', $email['evf_to_email'] );
 
+		$email['evf_email_message'] = '';
+
 		if ( ! empty( $email_notifications['evf_email_message'] ) ) {
 			if ( trim( '{all_fields}' ) == $email_notifications['evf_email_message'] ){
 				$email['evf_email_message'] = $data_html;
@@ -400,15 +402,23 @@ class EVF_Form_Task {
 			return;
 		}
 
-		$browser = evf_get_browser();
-
 		do_action( 'everest_forms_process_entry_save', $fields, $entry, $form_id, $form_data );
+
+		$browser    = evf_get_browser();
+		$user_ip    = evf_get_ip_address();
+		$user_agent = $browser['name'] . '/' . $browser['platform'];
+
+		// GDPR enhancements - If user details are disabled globally discard the IP and UA.
+		if ( get_option( 'everest_forms_disable_user_details', false ) ) {
+			$user_agent = '';
+			$user_ip    = '';
+		}
 
 		$entry_data = array(
 			'form_id'         => $form_id,
 			'user_id'         => get_current_user_id(),
-			'user_device'     => $browser['name'] . '/' . $browser['platform'],
-			'user_ip_address' => evf_get_ip_address(),
+			'user_device'     => sanitize_text_field( $user_agent ),
+			'user_ip_address' => sanitize_text_field( $user_ip ),
 			'status'          => 'publish',
 			'referer'         => $_SERVER['HTTP_REFERER'],
 			'date_created'    => current_time( 'mysql' )
