@@ -2,6 +2,7 @@
 
 = 1.1.6 - 24-05-2018 =
 * Fix - Appending HTMl instead of text for preview description.
+* GDPR - If user details are disabled globally discard the IP address and User Agent.
 
 = 1.1.5.1 - 04-05-2018 =
 * Fix - reCaptcha displaying after every inserted row issue.
